Updating the example code

--- a/example/Example.ipynb
+++ b/example/Example.ipynb
@@ -280,7 +280,7 @@
    ],
    "source": [
     "# Assembly of files from folder My_toy_project to produce: My_toy_project.nwb\n",
-    "%run exp2nwb.py Project_folder"
+    "%run exp2nwb.py Project_folder -D -o Example.nwb"
    ]
   },
   {
